tests/specs/ecosystem/oak/oak/13_1_0.test
oak/oak/13.1.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@oak/commons@0.6": "jsr:@oak/commons@0.6.1",
      "jsr:@std/assert@0.215": "jsr:@std/assert@0.215.0",
      "jsr:@std/assert@^0.213.1": "jsr:@std/assert@0.213.1",
      "jsr:@std/crypto@0.213": "jsr:@std/crypto@0.213.1",
      "jsr:@std/encoding@0.215": "jsr:@std/encoding@0.215.0",
      "jsr:@std/encoding@^0.213.1": "jsr:@std/encoding@0.213.1",
      "jsr:@std/http@0.213": "jsr:@std/http@0.213.1",
      "jsr:@std/media-types@0.215": "jsr:@std/media-types@0.215.0",
      "npm:path-to-regexp@6.2.1": "npm:path-to-regexp@6.2.1"
    },
    "jsr": {
      "@oak/commons@0.6.1": {
        "integrity": "c5455d45966d61e11a7a241503ee9b770e0c527f1951edd2a565eff531b8070d",
        "dependencies": [
          "jsr:@std/assert@0.215",
          "jsr:@std/encoding@0.215",
          "jsr:@std/media-types@0.215"
        ]
      },
      "@std/assert@0.213.1": {
        "integrity": "24c28178b30c8e0782c18e8e94ea72b16282207569cdd10ffb9d1d26f2edebfe"
      },
      "@std/assert@0.215.0": {
        "integrity": "4d80a5b5f1aef916131e3b5dcf8cfdad397affe87da7fa6398d8088e146d1e48"
      },
      "@std/crypto@0.213.1": {
        "integrity": "e02fe3baba719add8cd5188963ce0c215583e4a58102d026684b57634415cd46",
        "dependencies": [
          "jsr:@std/assert@^0.213.1",
          "jsr:@std/encoding@^0.213.1"
        ]
      },
      "@std/encoding@0.213.1": {
        "integrity": "fcbb6928713dde941a18ca5db88ca1544d0755ec8fb20fe61e2dc8144b390c62"
      },
      "@std/encoding@0.215.0": {
        "integrity": "9b24c964b0f61ea849d1ea38de7dea2190d08c8ffed732d36595bfb1b5e4dbe5"
      },
      "@std/http@0.213.1": {
        "integrity": "edad5fd31983c2d71877aeb949d571545b174aa556e5ab0d614650976a7326fb",
        "dependencies": [
          "jsr:@std/assert@^0.213.1",
          "jsr:@std/encoding@^0.213.1"
        ]
      },
      "@std/media-types@0.215.0": {
        "integrity": "76f3259f65193e848795e634b2782e7d90c861364fb90bcd81775378688091f1"
      }
    },
    "npm": {
      "path-to-regexp@6.2.1": {
        "integrity": "sha512-JLyh7xT1kizaEvcaXOQwOc2/Yhw6KZOvPf1S8401UyLk86CU79LN3vl7ztXGm/pZ+YjoyAJ4rxmHwbkBXJX+yw==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
    at file://<tmpdir>/application.ts:208:77

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
    at file://<tmpdir>/application.ts:211:26

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
    at file://<tmpdir>/application.ts:213:80

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
   * `"error"` and `"listen"`. */ addEventListener(param0?: any, param1?: any, param2?: any): any {
                                  ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/application.ts:215:35

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Reader'.
  constructor(file: (Deno.Reader & Deno.Seeker & Deno.Closer) | Uint8Array, type: string, ranges: ByteRange[], size: number, boundary: string){
                          ~~~~~~
    at file://<tmpdir>/range.ts:22:27

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  constructor(file: (Deno.Reader & Deno.Seeker & Deno.Closer) | Uint8Array, type: string, ranges: ByteRange[], size: number, boundary: string){
                                        ~~~~~~
    at file://<tmpdir>/range.ts:22:41

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Closer'.
  constructor(file: (Deno.Reader & Deno.Seeker & Deno.Closer) | Uint8Array, type: string, ranges: ByteRange[], size: number, boundary: string){
                                                      ~~~~~~
    at file://<tmpdir>/range.ts:22:55

Found 7 errors.

error: Type checking failed.

